fix tabs dropdown vertical alignement

--- a/src/components/Tabs/styles.css
+++ b/src/components/Tabs/styles.css
@@ -70,10 +70,12 @@
 
 .activeDropdownTabClass {
   margin: 0;
-  padding-right: 1.5rem;
+  padding-left: 1.5rem;
 }
 
 .activeDropdownTabWrapper {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  width: 142px;
 }
